// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extract-component default-alias-import.js 1`] = `
Object {
  "component": Object {
    "externalDependencies": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
      ],
    },
    "from": "../components/button-default-class-export",
    "importedName": "namespace",
    "jsx": Array [
      Object {
        "attributes": Array [],
        "children": Array [],
        "name": "button",
      },
    ],
    "localDependencies": Object {},
    "name": "Button",
    "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-class-export.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.12.5",
      "@babel/parser": "^7.12.5",
      "@babel/traverse": "^7.12.5",
      "@component-controls/core": "^2.4.0",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "@mdx-js/react": "^1.6.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "gray-matter": "^4.0.2",
      "hosted-git-info": "^3.0.4",
      "js-string-escape": "^1.0.1",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "remark-emoji": "^2.1.0",
      "remark-images": "^2.0.0",
      "resolve": "^1.15.1",
      "typescript": "^4.0.5",
    },
    "devDependencies": Object {
      "@babel/types": "^7.12.6",
      "@component-controls/ts-markdown-docs": "^2.2.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^26.0.10",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^26.4.2",
    },
    "fileHash": "68d46d6964a53de9df203beb8794fb61",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {
      "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-default-class-export.js",
      "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
      "issues": "https://github.com/ccontrols/component-controls/issues",
    },
    "version": "2.4.1",
  },
}
`;

exports[`extract-component default-import.js 1`] = `
Object {
  "component": Object {
    "externalDependencies": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
      ],
    },
    "from": "../components/button-default-arrow-func",
    "importedName": "default",
    "jsx": Array [
      Object {
        "attributes": Array [],
        "children": Array [],
        "name": "button",
      },
    ],
    "localDependencies": Object {},
    "name": "Button",
    "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-arrow-func.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.12.5",
      "@babel/parser": "^7.12.5",
      "@babel/traverse": "^7.12.5",
      "@component-controls/core": "^2.4.0",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "@mdx-js/react": "^1.6.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "gray-matter": "^4.0.2",
      "hosted-git-info": "^3.0.4",
      "js-string-escape": "^1.0.1",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "remark-emoji": "^2.1.0",
      "remark-images": "^2.0.0",
      "resolve": "^1.15.1",
      "typescript": "^4.0.5",
    },
    "devDependencies": Object {
      "@babel/types": "^7.12.6",
      "@component-controls/ts-markdown-docs": "^2.2.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^26.0.10",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^26.4.2",
    },
    "fileHash": "ceea0565a65f75c8c7b6b355d6d335ac",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {
      "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-default-arrow-func.js",
      "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
      "issues": "https://github.com/ccontrols/component-controls/issues",
    },
    "version": "2.4.1",
  },
}
`;

exports[`extract-component jsx-component.ts 1`] = `
Object {
  "component": Object {
    "externalDependencies": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
        Object {
          "importedName": "FC",
          "name": "FC",
        },
        Object {
          "importedName": "MouseEventHandler",
          "name": "MouseEventHandler",
        },
      ],
    },
    "from": "../components/component-jsx",
    "importedName": "Button",
    "jsx": Array [
      Object {
        "attributes": Array [],
        "children": Array [
          Object {
            "attributes": Array [
              "className",
            ],
            "children": Array [
              Object {
                "attributes": Array [
                  "id",
                  "name",
                  "defaultValue",
                ],
                "children": Array [],
                "name": "input",
              },
              Object {
                "attributes": Array [
                  "name",
                  "onClick",
                ],
                "children": Array [],
                "componentKey": "fbea66d4bd64ea2b935855efa5d522a1",
                "from": "./button-props",
                "importedName": "Button",
                "name": "PropsButton",
              },
            ],
            "name": "div",
          },
          Object {
            "attributes": Array [
              "name",
            ],
            "children": Array [],
            "componentKey": "70b5e95ff2001736f43bcb7d0affdb6a",
            "from": "./button-default-class",
            "importedName": "default",
            "name": "DefaultButton",
          },
        ],
        "from": "react",
        "importedName": "Fragment",
        "name": "React.Fragment",
      },
    ],
    "localDependencies": Object {
      "./button-default-class": Array [
        Object {
          "componentKey": "70b5e95ff2001736f43bcb7d0affdb6a",
          "importedName": "default",
          "name": "DefaultButton",
        },
      ],
      "./button-props": Array [
        Object {
          "componentKey": "fbea66d4bd64ea2b935855efa5d522a1",
          "importedName": "Button",
          "name": "PropsButton",
        },
      ],
    },
    "name": "Button",
    "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/component-jsx.tsx",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.12.5",
      "@babel/parser": "^7.12.5",
      "@babel/traverse": "^7.12.5",
      "@component-controls/core": "^2.4.0",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "@mdx-js/react": "^1.6.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "gray-matter": "^4.0.2",
      "hosted-git-info": "^3.0.4",
      "js-string-escape": "^1.0.1",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "remark-emoji": "^2.1.0",
      "remark-images": "^2.0.0",
      "resolve": "^1.15.1",
      "typescript": "^4.0.5",
    },
    "devDependencies": Object {
      "@babel/types": "^7.12.6",
      "@component-controls/ts-markdown-docs": "^2.2.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^26.0.10",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^26.4.2",
    },
    "fileHash": "6ae12a7bd45515ce6bcee23bb76fd10e",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {
      "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/component-jsx.tsx",
      "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
      "issues": "https://github.com/ccontrols/component-controls/issues",
    },
    "version": "2.4.1",
  },
}
`;

exports[`extract-component kind-component.js 1`] = `
Object {
  "component": Object {
    "name": "Button",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.12.5",
      "@babel/parser": "^7.12.5",
      "@babel/traverse": "^7.12.5",
      "@component-controls/core": "^2.4.0",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "@mdx-js/react": "^1.6.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "gray-matter": "^4.0.2",
      "hosted-git-info": "^3.0.4",
      "js-string-escape": "^1.0.1",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "remark-emoji": "^2.1.0",
      "remark-images": "^2.0.0",
      "resolve": "^1.15.1",
      "typescript": "^4.0.5",
    },
    "devDependencies": Object {
      "@babel/types": "^7.12.6",
      "@component-controls/ts-markdown-docs": "^2.2.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^26.0.10",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^26.4.2",
    },
    "fileHash": "f96a7e8142d3ef97c1bdda38ff7a5b92",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {
      "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/extract-component/kind-component.js",
      "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
      "issues": "https://github.com/ccontrols/component-controls/issues",
    },
    "version": "2.4.1",
  },
}
`;

exports[`extract-component named-alias-import.js 1`] = `
Object {
  "component": Object {
    "from": "../components/button-named-arrow-func",
    "importedName": "Btn",
    "name": "Button",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.12.5",
      "@babel/parser": "^7.12.5",
      "@babel/traverse": "^7.12.5",
      "@component-controls/core": "^2.4.0",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "@mdx-js/react": "^1.6.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "gray-matter": "^4.0.2",
      "hosted-git-info": "^3.0.4",
      "js-string-escape": "^1.0.1",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "remark-emoji": "^2.1.0",
      "remark-images": "^2.0.0",
      "resolve": "^1.15.1",
      "typescript": "^4.0.5",
    },
    "devDependencies": Object {
      "@babel/types": "^7.12.6",
      "@component-controls/ts-markdown-docs": "^2.2.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^26.0.10",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^26.4.2",
    },
    "fileHash": "2f4bd34d15be236674abaf6e894afe6e",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {
      "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-named-arrow-func.js",
      "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
      "issues": "https://github.com/ccontrols/component-controls/issues",
    },
    "version": "2.4.1",
  },
}
`;

exports[`extract-component named-import.js 1`] = `
Object {
  "component": Object {
    "externalDependencies": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
      ],
    },
    "from": "../components/button-named-class",
    "importedName": "Button",
    "jsx": Array [
      Object {
        "attributes": Array [],
        "children": Array [],
        "name": "button",
      },
    ],
    "localDependencies": Object {},
    "name": "Button",
    "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-class.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.12.5",
      "@babel/parser": "^7.12.5",
      "@babel/traverse": "^7.12.5",
      "@component-controls/core": "^2.4.0",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "@mdx-js/react": "^1.6.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "gray-matter": "^4.0.2",
      "hosted-git-info": "^3.0.4",
      "js-string-escape": "^1.0.1",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "remark-emoji": "^2.1.0",
      "remark-images": "^2.0.0",
      "resolve": "^1.15.1",
      "typescript": "^4.0.5",
    },
    "devDependencies": Object {
      "@babel/types": "^7.12.6",
      "@component-controls/ts-markdown-docs": "^2.2.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^26.0.10",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^26.4.2",
    },
    "fileHash": "996a04cd0627e5de9c21977a04008534",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {
      "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-named-class.js",
      "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
      "issues": "https://github.com/ccontrols/component-controls/issues",
    },
    "version": "2.4.1",
  },
}
`;

exports[`extract-component node-modules.js 1`] = `
Object {
  "component": Object {
    "externalDependencies": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
      ],
    },
    "from": "theme-ui",
    "importedName": "Button",
    "jsx": Array [
      Object {
        "attributes": Array [
          "ref",
          "as",
          "variant",
          "__themeKey",
          "__css",
        ],
        "children": Array [],
        "componentKey": "8713bb38e8dad53b3c99f15baef7965e",
        "from": "./Box",
        "importedName": "default",
        "name": "Box",
      },
    ],
    "localDependencies": Object {
      "./Box": Array [
        Object {
          "componentKey": "8713bb38e8dad53b3c99f15baef7965e",
          "importedName": "default",
          "name": "Box",
        },
      ],
    },
    "name": "Button",
    "request": "/Users/atanasster/component-controls/node_modules/@theme-ui/components/src/Button.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@theme-ui/color-modes": "^0.6.0-alpha.3",
      "@theme-ui/components": "^0.6.0-alpha.3",
      "@theme-ui/core": "0.6.0-alpha.1",
      "@theme-ui/css": "0.6.0-alpha.1",
      "@theme-ui/mdx": "0.6.0-alpha.1",
      "@theme-ui/theme-provider": "^0.6.0-alpha.3",
    },
    "devDependencies": undefined,
    "fileHash": "8f6835169f285fcd3ad5425d9268a8f1",
    "name": "theme-ui",
    "peerDependencies": Object {
      "react": "^16.14.0 || ^17.0.0",
    },
    "repository": Object {
      "browse": "https://github.com/system-ui/theme-ui/tree/master/dist/index.js",
      "docs": "https://github.com/system-ui/theme-ui/tree/master#readme",
      "issues": "https://github.com/system-ui/theme-ui/issues",
    },
    "version": "0.6.0-alpha.3",
  },
}
`;

exports[`extract-component node-modules-source.js 1`] = `
Object {
  "component": Object {
    "externalDependencies": Object {},
    "from": "@component-controls/components",
    "importedName": "Subtitle",
    "jsx": Array [],
    "localDependencies": Object {},
    "name": "Button",
    "request": "/Users/atanasster/component-controls/node_modules/@component-controls/components/dist/index.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@primer/octicons-react": "^10.0.0",
      "@theme-ui/match-media": "^0.6.0-alpha.1",
      "@theme-ui/presets": "^0.6.0-alpha.1",
      "copy-to-clipboard": "^3.2.1",
      "fast-memoize": "^2.5.2",
      "markdown-to-jsx": "^6.11.0",
      "mdx-utils": "*",
      "prism-react-renderer": "^1.0.2",
      "react-animate-height": "^2.0.20",
      "react-popper-tooltip": "^3.1.0",
      "react-switch": "^5.0.1",
      "react-table": "^7.0.0",
      "react-tabs": "^3.1.0",
      "scroll-into-view-if-needed": "^2.2.25",
      "theme-ui": "^0.6.0-alpha.3",
    },
    "devDependencies": Object {
      "@component-controls/jest-snapshots": "^2.4.1",
      "@component-controls/ts-markdown-docs": "^2.2.0",
      "@theme-ui/css": "^0.6.0-alpha.1",
      "@types/markdown-to-jsx": "^6.11.0",
      "@types/react": "^16.9.34",
      "@types/react-table": "^7.0.10",
      "@types/react-tabs": "^2.3.1",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "react": "^17.0.1",
      "react-dom": "^17.0.1",
      "typescript": "^4.0.5",
    },
    "fileHash": "a8331272bc389f63195926fe6e7dd6d6",
    "name": "@component-controls/components",
    "peerDependencies": Object {
      "@theme-ui/css": ">= 0.4.0-rc.1",
      "react": "^16.8.0 || ^17",
      "react-dom": "^16.8.0 || ^17",
    },
    "repository": Object {
      "browse": "https://github.com/ccontrols/component-controls/tree/master/ui/components/dist/index.js",
      "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
      "issues": "https://github.com/ccontrols/component-controls/issues",
    },
    "version": "2.4.1",
  },
}
`;

exports[`extract-component non-existing-file.js 1`] = `
Object {
  "component": Object {
    "from": "./Button",
    "importedName": "Btn",
    "name": "Button",
  },
  "componentPackage": undefined,
}
`;

exports[`extract-component parameters-component.js 1`] = `
Object {
  "component": Object {
    "externalDependencies": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
      ],
    },
    "from": "../components/button-named-arrow-func",
    "importedName": "Button",
    "jsx": Array [
      Object {
        "attributes": Array [],
        "children": Array [],
        "name": "button",
      },
    ],
    "localDependencies": Object {},
    "name": "Button",
    "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-arrow-func.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.12.5",
      "@babel/parser": "^7.12.5",
      "@babel/traverse": "^7.12.5",
      "@component-controls/core": "^2.4.0",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "@mdx-js/react": "^1.6.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "gray-matter": "^4.0.2",
      "hosted-git-info": "^3.0.4",
      "js-string-escape": "^1.0.1",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "remark-emoji": "^2.1.0",
      "remark-images": "^2.0.0",
      "resolve": "^1.15.1",
      "typescript": "^4.0.5",
    },
    "devDependencies": Object {
      "@babel/types": "^7.12.6",
      "@component-controls/ts-markdown-docs": "^2.2.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^26.0.10",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^26.4.2",
    },
    "fileHash": "2f4bd34d15be236674abaf6e894afe6e",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {
      "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-named-arrow-func.js",
      "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
      "issues": "https://github.com/ccontrols/component-controls/issues",
    },
    "version": "2.4.1",
  },
}
`;

exports[`extract-component story-component.js 1`] = `
Object {
  "component": Object {
    "externalDependencies": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
      ],
    },
    "from": "../components/button-named-class",
    "importedName": "Button",
    "jsx": Array [
      Object {
        "attributes": Array [],
        "children": Array [],
        "name": "button",
      },
    ],
    "localDependencies": Object {},
    "name": "Button",
    "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-class.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.12.5",
      "@babel/parser": "^7.12.5",
      "@babel/traverse": "^7.12.5",
      "@component-controls/core": "^2.4.0",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "@mdx-js/react": "^1.6.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "gray-matter": "^4.0.2",
      "hosted-git-info": "^3.0.4",
      "js-string-escape": "^1.0.1",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "remark-emoji": "^2.1.0",
      "remark-images": "^2.0.0",
      "resolve": "^1.15.1",
      "typescript": "^4.0.5",
    },
    "devDependencies": Object {
      "@babel/types": "^7.12.6",
      "@component-controls/ts-markdown-docs": "^2.2.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^26.0.10",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^26.4.2",
    },
    "fileHash": "996a04cd0627e5de9c21977a04008534",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {
      "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-named-class.js",
      "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
      "issues": "https://github.com/ccontrols/component-controls/issues",
    },
    "version": "2.4.1",
  },
}
`;
